[gd_scene load_steps=43 format=2]

[ext_resource path="res://images/Characters/Penguin/penguin.png" type="Texture" id=1]
[ext_resource path="res://images/Characters/Penguin/penguin_standing_slap.png" type="Texture" id=2]
[ext_resource path="res://Scripts/CameraController.gd" type="Script" id=3]
[ext_resource path="res://images/Characters/Penguin/penguin_standing_kick.png" type="Texture" id=4]
[ext_resource path="res://Scripts/PlayerController.gd" type="Script" id=5]
[ext_resource path="res://images/Characters/Penguin/penguin_jump_slap.png" type="Texture" id=6]
[ext_resource path="res://images/Characters/Penguin/penguin_jump_kick.png" type="Texture" id=7]
[ext_resource path="res://images/Characters/StickWarrior/stickwarrior_standing_hit.png" type="Texture" id=8]
[ext_resource path="res://images/Characters/Penguin/penguin_jump.png" type="Texture" id=9]
[ext_resource path="res://images/Characters/StickWarrior/stickwarrior.png" type="Texture" id=10]
[ext_resource path="res://images/Characters/StickWarrior/stickwarrior_standing_kick.png" type="Texture" id=11]
[ext_resource path="res://images/Characters/StickWarrior/stickwarrior_jump.png" type="Texture" id=12]
[ext_resource path="res://Scenes/MainGame/ParallaxBackground.tscn" type="PackedScene" id=13]
[ext_resource path="res://images/Characters/StickWarrior/stickwarrior_jump_hit.png" type="Texture" id=14]
[ext_resource path="res://images/HealthBar/healthbar2.png" type="Texture" id=15]
[ext_resource path="res://images/HealthBar/healthbar_bg.png" type="Texture" id=16]
[ext_resource path="res://images/Characters/Penguin/penguin_crouch.png" type="Texture" id=17]
[ext_resource path="res://images/Characters/StickWarrior/stickwarrior_jump_kick.png" type="Texture" id=18]
[ext_resource path="res://images/Characters/StickWarrior/stickwarrior_crouch.png" type="Texture" id=19]
[ext_resource path="res://images/Characters/StickWarrior/stickwarrior_crouch_kick.png" type="Texture" id=20]
[ext_resource path="res://images/Characters/StickWarrior/stickwarrior_crouch_hit.png" type="Texture" id=21]
[ext_resource path="res://images/Characters/Penguin/penguin_crouch_kick.png" type="Texture" id=22]
[ext_resource path="res://images/Characters/Penguin/penguin_crouch_slap.png" type="Texture" id=23]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 9, 15.4 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 7, 2 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 6, 3.5 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 6.99999, 2 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 6.5, 3.5 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 9, 10.4 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 7, 2 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 6.5, 3.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.1, 23.9 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 1.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.5, 5.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.9, 5.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 7.5 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 12.9, 21.9 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 6.49999, 4 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 7, 6.5 )

[sub_resource type="Shader" id=7]
code = "// NOTE: Shader automatically converted from Godot Engine 3.4.3.stable's CanvasItemMaterial.

shader_type canvas_item;
render_mode blend_mix;
//render_mode skip_vertex_transform;

uniform float health = 0.5;
uniform sampler2D background;

void fragment(){
  if(UV.x > health) {
    COLOR = texture(background, vec2(health, UV.y));
  } else {
    COLOR = texture(TEXTURE, vec2(health, UV.y));
  }
}

//void vertex() {
//	VERTEX = (EXTRA_MATRIX * (WORLD_MATRIX * vec4(VERTEX, 0.0, 1.0))).xy;
//}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/health = 0.5
shader_param/background = ExtResource( 16 )

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 7 )
shader_param/health = 0.5
shader_param/background = ExtResource( 16 )

[node name="Node2D" type="Node2D"]

[node name="Game" type="Node2D" parent="."]

[node name="Player 1" type="Sprite" parent="Game"]
position = Vector2( -500, 90 )
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )
script = ExtResource( 5 )
tex_standing = ExtResource( 1 )
tex_standing_punch = ExtResource( 2 )
tex_standing_kick = ExtResource( 4 )
tex_jump = ExtResource( 9 )
tex_jump_punch = ExtResource( 6 )
tex_jump_kick = ExtResource( 7 )
tex_crouch = ExtResource( 17 )
tex_crouch_punch = ExtResource( 23 )
tex_crouch_kick = ExtResource( 22 )
health_bar = NodePath("../../CanvasLayer/TextureRect")
invincibility_cooldown = 0.25

[node name="Hitbox" type="Area2D" parent="Game/Player 1"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Game/Player 1/Hitbox"]
position = Vector2( -2, 16.4 )
shape = SubResource( 10 )

[node name="Stand_Punch" type="Area2D" parent="Game/Player 1"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Game/Player 1/Stand_Punch"]
position = Vector2( 9, 19 )
shape = SubResource( 11 )

[node name="Stand_Kick" type="Area2D" parent="Game/Player 1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Player 1/Stand_Kick"]
position = Vector2( 9, 27.5 )
shape = SubResource( 12 )

[node name="Jump_Punch" type="Area2D" parent="Game/Player 1"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Game/Player 1/Jump_Punch"]
position = Vector2( 8.99999, 17 )
shape = SubResource( 13 )

[node name="Jump_Kick" type="Area2D" parent="Game/Player 1"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Game/Player 1/Jump_Kick"]
position = Vector2( 9.5, 24.5 )
shape = SubResource( 14 )

[node name="Crouch_Hitbox" type="Area2D" parent="Game/Player 1"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Game/Player 1/Crouch_Hitbox"]
position = Vector2( -2, 21.4 )
scale = Vector2( 1, 1 )
shape = SubResource( 15 )

[node name="Crouch_Punch" type="Area2D" parent="Game/Player 1"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Game/Player 1/Crouch_Punch"]
position = Vector2( 9, 24 )
scale = Vector2( 1, 1 )
shape = SubResource( 19 )

[node name="Crouch_Kick" type="Area2D" parent="Game/Player 1"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Game/Player 1/Crouch_Kick"]
position = Vector2( 8.5, 27.5 )
scale = Vector2( 1, 1 )
shape = SubResource( 18 )

[node name="Player 2" type="Sprite" parent="Game"]
position = Vector2( 500, 90 )
scale = Vector2( -5, 5 )
texture = ExtResource( 10 )
script = ExtResource( 5 )
playerIdx = 2
tex_standing = ExtResource( 10 )
tex_standing_punch = ExtResource( 8 )
tex_standing_kick = ExtResource( 11 )
tex_jump = ExtResource( 12 )
tex_jump_punch = ExtResource( 14 )
tex_jump_kick = ExtResource( 18 )
tex_crouch = ExtResource( 19 )
tex_crouch_punch = ExtResource( 21 )
tex_crouch_kick = ExtResource( 20 )
health_bar = NodePath("../../CanvasLayer/TextureRect2")
invincibility_cooldown = 0.25

[node name="Hitbox" type="Area2D" parent="Game/Player 2"]
scale = Vector2( -1, 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Game/Player 2/Hitbox"]
position = Vector2( -0.0999985, 7.9 )
shape = SubResource( 1 )

[node name="Stand_Punch" type="Area2D" parent="Game/Player 2"]
scale = Vector2( -1, 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Game/Player 2/Stand_Punch"]
position = Vector2( -19, 8.5 )
shape = SubResource( 2 )

[node name="Stand_Kick" type="Area2D" parent="Game/Player 2"]
scale = Vector2( -1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Player 2/Stand_Kick"]
position = Vector2( -12.5, 19.5 )
shape = SubResource( 3 )

[node name="Jump_Punch" type="Area2D" parent="Game/Player 2"]
scale = Vector2( -1, 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Game/Player 2/Jump_Punch"]
position = Vector2( -20.1, 13.5 )
shape = SubResource( 4 )

[node name="Jump_Kick" type="Area2D" parent="Game/Player 2"]
scale = Vector2( -1, 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Game/Player 2/Jump_Kick"]
position = Vector2( -10, 22.5 )
shape = SubResource( 5 )

[node name="Crouch_Hitbox" type="Area2D" parent="Game/Player 2"]
scale = Vector2( -1, 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Game/Player 2/Crouch_Hitbox"]
position = Vector2( -2.9, 9.9 )
scale = Vector2( 1, 1 )
shape = SubResource( 16 )

[node name="Crouch_Punch" type="Area2D" parent="Game/Player 2"]
scale = Vector2( -1, 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Game/Player 2/Crouch_Punch"]
position = Vector2( -21.5, 14 )
scale = Vector2( 1, 1 )
shape = SubResource( 20 )

[node name="Crouch_Kick" type="Area2D" parent="Game/Player 2"]
scale = Vector2( -1, 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Game/Player 2/Crouch_Kick"]
position = Vector2( -13, 22.5 )
scale = Vector2( 1, 1 )
shape = SubResource( 21 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -1000
limit_top = -600
limit_right = 1000
limit_bottom = 360
smoothing_enabled = true
editor_draw_limits = true
script = ExtResource( 3 )
player_1_path = NodePath("../Game/Player 1")
player_2_path = NodePath("../Game/Player 2")

[node name="ParallaxBackground" parent="." instance=ExtResource( 13 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
material = SubResource( 8 )
anchor_left = 0.025
anchor_top = 0.025
anchor_right = 0.45
anchor_bottom = 0.025
margin_bottom = 40.0
texture = ExtResource( 15 )
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
material = SubResource( 9 )
anchor_left = 0.55
anchor_top = 0.025
anchor_right = 0.975
anchor_bottom = 0.025
margin_bottom = 40.0
texture = ExtResource( 15 )
stretch_mode = 1
flip_h = true
